--- a/test/arc-workspace-state-mixin-test.html
+++ b/test/arc-workspace-state-mixin-test.html
@@ -4,13 +4,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>ArcWorkspaceStateMixin test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../arc-request-workspace.html">
-  <link rel="import" href="../../arc-data-generator/arc-data-generator.html">
-  <link rel="import" href="../../arc-models/project-model.html">
-  <link rel="import" href="../../arc-models/request-model.html">
-  <link rel="import" href="../../arc-models/variables-model.html">
+
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../../../mocha/mocha.js"></script>
+  <script src="../../../chai/chai.js"></script>
+  <script src="../../../wct-mocha/wct-mocha.js"></script>
+
+  <!-- CodeMirror + modes loader -->
+  <script src="../../../codemirror/lib/codemirror.js"></script>
+  <script src="../../../codemirror/addon/mode/loadmode.js"></script>
+  <script src="../../../codemirror/mode/meta.js"></script>
+  <!--Default set of parsers, add as many as you need -->
+  <script src="../../../codemirror/mode/javascript/javascript.js"></script>
+  <script src="../../../codemirror/mode/xml/xml.js"></script>
+  <script src="../../../codemirror/mode/htmlmixed/htmlmixed.js"></script>
+  <!-- JSON linter -->
+  <script src="../../../jsonlint/lib/jsonlint.js"></script>
+  <script src="../../../codemirror/addon/lint/lint.js"></script>
+  <script src="../../../codemirror/addon/lint/json-lint.js"></script>
+  <!-- Headers hint support -->
+  <script src="../../../@advanced-rest-client/code-mirror-hint/headers-addon.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/show-hint.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/hint-http-headers.js"></script>
 </head>
 <body>
   <project-model></project-model>
@@ -23,8 +39,15 @@
     </template>
   </test-fixture>
 
-  <script>
-  /* global DataGenerator */
+  <script type="module">
+  import {DataGenerator} from '../../arc-data-generator/arc-data-generator.js';
+  import {afterNextRender} from '../../../@polymer/polymer/lib/utils/render-status.js';
+  import '../../arc-models/project-model.js';
+  import '../../arc-models/request-model.js';
+  import '../../arc-models/variables-model.js';
+  import '../arc-request-workspace.js';
+  import sinon from '../../../sinon/pkg/sinon-esm.js';
+
   suite('ArcWorkspaceStateMixin', () => {
     suite('_dispatchWorkspaceState()', () => {
       let element;
@@ -285,7 +308,7 @@
         const spy = sinon.spy();
         element.addEventListener('selected-changed', spy);
         element._afterRestore();
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           assert.equal(spy.callCount, 2);
           done();
         });
@@ -294,7 +317,7 @@
       test('Sets restoring flag to false', (done) => {
         element._setRestoring(true);
         element._afterRestore();
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           assert.isFalse(element.restoring);
           done();
         });
@@ -303,7 +326,7 @@
       test('Sets initialized flag to true', (done) => {
         element._setInitialized(false);
         element._afterRestore();
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           assert.isTrue(element.initialized);
           done();
         });
@@ -419,7 +442,7 @@
         element.restoreWorkspace();
         element.removeEventListener('workspace-state-read', noopFactory);
         assert.deepEqual(element.activeRequests, []);
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           done();
         });
       });
@@ -429,7 +452,7 @@
         element.restoreWorkspace();
         element.removeEventListener('workspace-state-read', noopFactory);
         assert.isTrue(element.restoring);
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           done();
         });
       });
@@ -440,7 +463,7 @@
         element.restoreWorkspace();
         element.removeEventListener('workspace-state-read', noopFactory);
         assert.isTrue(spy.called);
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           done();
         });
       });
@@ -450,7 +473,7 @@
         element.restoreWorkspace()
         .catch(() => {});
         assert.isTrue(spy.called);
-        Polymer.RenderStatus.afterNextRender(element, () => {
+        afterNextRender(element, () => {
           done();
         });
       });
@@ -459,7 +482,7 @@
         element.addEventListener('workspace-state-read', noopFactory);
         element.restoreWorkspace()
         .then(() => {
-          Polymer.RenderStatus.afterNextRender(element, () => {
+          afterNextRender(element, () => {
             assert.lengthOf(element.activeRequests, 1);
             assert.equal(element.selected, 0);
             assert.isUndefined(element.environment);
@@ -473,7 +496,7 @@
         element.addEventListener('workspace-state-read', dataFactory);
         element.restoreWorkspace()
         .then(() => {
-          Polymer.RenderStatus.afterNextRender(element, () => {
+          afterNextRender(element, () => {
             assert.lengthOf(element.activeRequests, 2);
             assert.equal(element.selected, 1);
             assert.equal(element.environment, 'other-env');
@@ -487,7 +510,7 @@
         element.addEventListener('workspace-state-read', errorFactory);
         element.restoreWorkspace()
         .then(() => {
-          Polymer.RenderStatus.afterNextRender(element, () => {
+          afterNextRender(element, () => {
             assert.lengthOf(element.activeRequests, 1);
             assert.equal(element.selected, 0);
             assert.isUndefined(element.environment);
