--- a/test/request-workspace-append-event-test.html
+++ b/test/request-workspace-append-event-test.html
@@ -4,12 +4,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>arc-request-workspace test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../arc-request-workspace.html">
-  <link rel="import" href="../../arc-data-generator/arc-data-generator.html">
+
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../@polymer/test-fixture/test-fixture.js"></script>
+  <script src="../../../mocha/mocha.js"></script>
+  <script src="../../../chai/chai.js"></script>
+  <script src="../../../wct-mocha/wct-mocha.js"></script>
+
+  <!-- CodeMirror + modes loader -->
+  <script src="../../../codemirror/lib/codemirror.js"></script>
+  <script src="../../../codemirror/addon/mode/loadmode.js"></script>
+  <script src="../../../codemirror/mode/meta.js"></script>
+  <!--Default set of parsers, add as many as you need -->
+  <script src="../../../codemirror/mode/javascript/javascript.js"></script>
+  <script src="../../../codemirror/mode/xml/xml.js"></script>
+  <script src="../../../codemirror/mode/htmlmixed/htmlmixed.js"></script>
+  <!-- JSON linter -->
+  <script src="../../../jsonlint/lib/jsonlint.js"></script>
+  <script src="../../../codemirror/addon/lint/lint.js"></script>
+  <script src="../../../codemirror/addon/lint/json-lint.js"></script>
+  <!-- Headers hint support -->
+  <script src="../../../@advanced-rest-client/code-mirror-hint/headers-addon.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/show-hint.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/hint-http-headers.js"></script>
 </head>
 <body>
+  <project-model></project-model>
+
   <test-fixture id="Basic">
     <template>
       <arc-request-workspace></arc-request-workspace>
@@ -21,8 +42,13 @@
       <arc-request-workspace no-auto-projects no-auto-restore></arc-request-workspace>
     </template>
   </test-fixture>
-  <script>
-  /* global DataGenerator */
+
+  <script type="module">
+  import '../arc-request-workspace.js';
+  import {DataGenerator} from '../../arc-data-generator/arc-data-generator.js';
+  import sinon from '../../../sinon/pkg/sinon-esm.js';
+  import '../../arc-models/project-model.js';
+
   suite('request-workspace-append event', () => {
     let element;
     setup((done) => {
