--- a/test/arc-workspace-requests-mixin-test.html
+++ b/test/arc-workspace-requests-mixin-test.html
@@ -157,6 +157,7 @@
         element = fixture('Basic');
         element.narrow = true;
         element.oauth2RedirectUri = 'http://auth.com';
+        element.ignoreContentOnGet = true;
       });
 
       test('Sets narrow property', () => {
@@ -169,6 +170,12 @@
         const panel = element.__createPanelInstance();
         element.__setPanelConfiguration(panel);
         assert.equal(panel.oauth2RedirectUri, 'http://auth.com');
+      });
+
+      test('Sets ignoreContentOnGet propery', () => {
+        const panel = element.__createPanelInstance();
+        element.__setPanelConfiguration(panel);
+        assert.isTrue(panel.ignoreContentOnGet);
       });
     });
 
@@ -878,6 +885,12 @@
         element.oauth2RedirectUri = 'http://auth.com';
         assert.equal(p1.oauth2RedirectUri, 'http://auth.com');
         assert.equal(p2.oauth2RedirectUri, 'http://auth.com');
+      });
+
+      test('Updates ignoreContentOnGet when workspace property change', () => {
+        element.ignoreContentOnGet = true;
+        assert.isTrue(p1.ignoreContentOnGet);
+        assert.isTrue(p2.ignoreContentOnGet);
       });
     });
   });
